--- a/index.html
+++ b/index.html
@@ -9,6 +9,11 @@
     <!-- bootstrap css cdn link -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-KyZXEAg3QhqLMpG8r+8fhAXLRk2vvoC2f3B09zVXn8CA5QIVfZOJ3BCsw2P0p/We" crossorigin="anonymous">
+    <style>
+        #count-div {
+            display: none;
+        }
+    </style>
 </head>
 
 <body>
@@ -56,7 +61,7 @@
         <div id="error-message"></div>
     </div>
     <!-- search result count -->
-    <div class="container mt-4">
+    <div class="container mt-4" id="count-div">
         <div class="card w-100 mx-auto">
             <div class="card-body text-center" id="count">
 
