--- a/index.html
+++ b/index.html
@@ -16,10 +16,11 @@
     </style>
 </head>
 
-<body>
+<body class="bg-light">
     <!-- search field -->
     <div class="container mt-4">
         <div class="w-100 mx-auto">
+            <h1 class="text-center text-info pb-3">Search Your Favourite Book Name !!</h1>
             <div class="input-group mb-3">
                 <input id="search-input" type="text" class="form-control" placeholder="Search your book"
                     aria-label="Search your book" aria-describedby="search-btn" />
